@@ -2,6 +2,7 @@
 player=Player
 enemy=Enemy
 all=All
+welcome-msg=[font=default-large-bold][color=210, 117, 36]Welcome to Weasel's Demolition Derby![/color][/font]\nIf this is your first time playing it will be worth while reading the Tips-And-Tricks.\nHave fun and let there be destruction!
 
 [lobby]
 lobby=Lobby
@@ -26,5 +27,28 @@ sledgehammer=Sledgehammer
 thunderdome=Thunderdome
 bellville=Bellville
 
+[tips-and-tricks-util]
+affects-player=Affects only you
+affects-enemy=Affects a random enemy
+affects-all=Affects all players
+
+no_trail=Remove trail
+full_trail=Solid trail
+speed_up=Speed boost
+tank=Turn into a tank
+slow_down=Slow down
+worm=Spawn a worm
+biters=Spawn biters
+invert=Inverse steering
+artillery=Artillery Rain
+nuke=A stray Nuke
+
+[tips-and-tricks-item-name]
+what-is-demolition-derby=What is Demolision Derby?
+effect-categories=Effect Categories
+effect-types=Effect Types
+
 [tips-and-tricks-item-description]
-introduction=In the Demolision Derby there are effects that can give you advantage (or disadvantage) in the arena. They are applied by driving through the effect. The background colour of these effects determines who the effect is applied to. A green effect is applied to you, a red one to a random enemy, and a blue one to all players. This is true regardless of if the effect is good or bad.
+what-is-demolition-derby=Demolition Derby is game where you are driving a vehicle while contained in a small arena with other players, and the last player alive wins. You die by crashing, or being killed by one of the various effects. Your vehicle also leaves behind a trail of walls which becomes obstacles to dodge or trap your enemies with.\n\n[font=heading-2]How To Play:[/font]\n    1. Enter a Lobby with you friends by standing on one of the coloured teleporting pads.\n    2. When you and your friend are ready enter one of the vehicles. \n    3. Once all players entered a vehicle you'll be teleported to the arena, where the round will start.\n    4. Last player alive wins!\n\n[font=heading-2]General Info:[/font]\n    - Your score is kept as long as you are in the lobby.\n    - See the other tips-and-tricks to read more about the various effects.\n    - It's more fun if you try to trap your enemies with your trail!
+effect-categories=In the Demolision Derby each effect can give you an advantage or disadvantage in the arena depending on [font=default-bold]who[/font] the effect targets. This is shown by the background colour of the the ring. What the effect will actually do (shown by the icon) is dependent on the [font=default-bold]Effect Type[/font] which is explained later.\n    A [color=0, 255, 0]green[/color] effect is applied to you, even if it disadvantageous.\n    A [color=210, 0, 0]red[/color] is applied to a random enemy, even if it helps them. \n    A [color=0, 0, 255]blue[/color] effect effects all players.
+effect-types=There are different effects that will be temporarily applied to you or your enemies. Here is a list of the current effects, and the colour will show if it's typically [color=0, 255, 0]good[/color] or [color=255, 0, 0]bad[/color] for you, or if it causes destruction to [color=0, 0, 255]all[/color]! Remember to only activate the effects that's good for you or else you'll be giving your enemy the advantage!\n\n[font=heading-2]Here follows a quick description of the effects:[/font]\n    [color=0, 255, 0][font=default-bold]Speed Boost[/font][/color]: Speed up your vehicle with deadly flames that kill biters.\n    [color=0, 255, 0][font=default-bold]Tank[/font][/color]: Drive a tank through you walls, biters, and even your enemies!\n    [color=0, 255, 0][font=default-bold]Worm[/font][/color]: Spawn a worm in your trail that will attack a random enemy.\n    [color=0, 255, 0][font=default-bold]Biters[/font][/color]: Spawn a few biters in your trail that will attack a random enemy.\n    [color=0, 255, 0][font=default-bold]Full Trail[/font][/color]: Your trail will have no gaps to trap your enemies.\n    [color=255, 0, 0][font=default-bold]Slow Down[/font][/color]: Slow down your vehicle with goo.\n    [color=255, 0, 0][font=default-bold]Invert Steering[/font][/color]: Left is now right, watch out for the walls!\n    [color=255, 0, 0][font=default-bold]No trail[/font][/color]: No trail is created which makes it easy for enemies to escape.\n    [color=0, 0, 255][font=default-bold]Artillery[/font][/color]: Artillery will rain from the sky!\n    [color=0, 0, 255][font=default-bold]Nuke[/font][/color]: A nuke will hit a random location on the map.
