@@ -70,9 +70,6 @@ function Builder.iterate(arena)
                 "fire", -- This is for worm spit
             },
         }) do
-            if entity.type == "sticker" then
-                game.print("Found it!")
-            end
             if entity.name ~= "wdd-border" then
                 entity.destroy{raise_destroy=false}
             end
