@@ -3,7 +3,8 @@ Version: 0.2.2
 Date: ??. ??. 2021
   Features:
     - Improved some graphics.
-    - Can now skip splash cutscene
+    - Can now skip splash cutscene.
+    - Improved Tips-And-Tricks.
   Changes:
     - Increase tank effect time from 5 to 10 seconds.
 ---------------------------------------------------------------------------------------------------
